# automaton

./: .envrc  .gitignore  README.md  generate_logs.py  graph_viewer.py  log_collector.py  main.py  pyproject.toml
arduino/sketch_ultrasonic_sensor/: sketch_ultrasonic_sensor.ino
arduino/ultrasonic_sensor/: make.sh  monitor.sh  ultrasonic_sensor.ino
